# agentic-rag-workshop

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  rag_engine.py
data/: faq.json
